# redis_mvp

./: README.md  docker-compose.yml  pyproject.toml
redis_mvp/: Dockerfile
redis_mvp/api/: main.py
redis_mvp/api/templates/: comments.html
redis_mvp/common/: constants.py  exceptions.py
redis_mvp/entrypoint/: main.py
redis_mvp/entrypoints/: main.py
redis_mvp/event/: Dockerfile
redis_mvp/queue/: updater.py  worker.py
redis_mvp/redis_worker/: updater.py  worker.py
